   
   o  Updated Commander.Rd.
   
   o  Small changes.
   
Version 1.5-1

   o  Fixes to links in docs (pointed out by Brian Ripley).
   
Version 1.5-2

   o  Updated Spanish translation (courtesy of Manuel Munoz Marquez).
   
   o  Updated Russian translation (courtesy of Alexey Shipunov).
   
   o  Fixed bug in pie chart dialog causing the colorspace package not to load properly (reported by Massimiliano Amati).

Version 1.5-3

   o  Updated Japanese translation (courtesy of Takaharu Araki).
   
   o  Updated French translation (courtesy of Philippe Grosjean).
   
   o  Updated Romanian translation (courtesy of Adrian Dusa).

   o  Updated Indonesian translation (coutersy of I Made Tirta).
   
   o  Small changes.
   
Version 1.5-4

   o  rcorr.adjust() now returns an object of class "rcorr.adjust" (to satisfy a request by Liviu Andronic).
   
   o  Confint() modified to include coefficient estimates, and to include exponentiated coefficients for binomial logit models (suggested by  Ricardo Ocana-Riola). Small fix to method for multinom models.
   
   o  Added cld() display to pairwise comparisons in one-way ANOVA (suggested by Marcin Kozak).
   
   o  Added options to radioButtons() (based on code contributed by Liviu Andronic).
   
   o  Small fixes to code and docs.
   
 Version 1.5-5
 
   o  Added a command stack accessed by popCommand() of length controlled by the length.command.stack option (suggested by Liviu Andronic).
   
   o  Added \code{ask.to.exit} option (suggested by Liviu Andronic).
   
   o  Removed Rcmdr.sh from inst/etc/linux and modified Rcmdr.desktop (according to Dirk Eddelbuettel's instructions).
   
   o  Fixed bug in QQPlot() that surfaced in R. 2.11.0 (reported by Howard Edwards). 
   
   o  rgl package no longer unloaded when the Commander is closed.
   
Version 1.5-6

   o  New Italian translation (courtesy of Stefano Calza).
   
Version 1.6-0

   o  Made compatible with car version 2.0-0.