@@ -890,3 +890,9 @@ Version 1.5-6
 Version 1.6-0
 
    o  Made compatible with car version 2.0-0.
+   
+   o  Messages window is now sizeable (via messages.height Rcmdr option) and editable (suggested by Rob James).
+   
+   o  Non-error messages from commands are now labelled as "MESSAGE" rather than "WARNING", since the latter isn't always accurate.
+   
+   o  Small fixes.
